tests/consteval_diag_error_basic.sl
import "compiler"

const X int = fail_now()

fn fail_now() int {
	compiler.error("boom")
	return 0
}
